# ridehail_prediction_AI

./: README.md
ridehail-demand/: .gitignore  README.md  environment.yml  pyproject.toml
ridehail-demand/configs/: config.yaml
ridehail-demand/configs/data/: nyc_taxi.yaml
ridehail-demand/configs/model/: convlstm.yaml  tgnn.yaml
ridehail-demand/configs/training/: default.yaml
ridehail-demand/notebooks/: 01_data_exploration.ipynb
ridehail-demand/outputs/2026-04-12/18-56-05/.hydra/: config.yaml  hydra.yaml
ridehail-demand/scripts/: preprocess.py  train.py
ridehail-demand/src/ridehail/: __init__.py
ridehail-demand/src/ridehail/data/: dataset.py
ridehail-demand/src/ridehail/evaluation/: metrics.py
ridehail-demand/src/ridehail/features/: temporal.py
ridehail-demand/src/ridehail/models/: base.py
ridehail-demand/src/ridehail/training/: trainer.py
ridehail-demand/src/ridehail/utils/: device.py  seed.py
ridehail-demand/tests/: test_smoke.py
